--- a/src/generator/template/index.html.mustache
+++ b/src/generator/template/index.html.mustache
@@ -6,9 +6,7 @@
   <body>
     <h1>{{ title }}</h1>
     {{# d3 }}
-      <ul>
-        <li>{{ d3 }}</li>
-      </ul>
+      <div class="dataviz">{{}}</div>
     {{/ d3 }}
     {{# patient }}
     <ul id="patient-info">
@@ -18,6 +16,6 @@
       <li>age: {{age}}</li>
     </ul>
     {{/ patient }}
-    <p> this is a test pdf </p>
   </body>
+  <footer> this is a test pdf </footer>
 </html>
