adding webkit-styling

--- a/src/generator/template/index.html.mustache
+++ b/src/generator/template/index.html.mustache
@@ -6,7 +6,7 @@
   <body>
     <h1>{{ title }}</h1>
     {{# d3 }}
-      <div class="dataviz">{{}}</div>
+      <div class="dataviz"></div>
     {{/ d3 }}
     {{# patient }}
     <ul id="patient-info">
