--- a/src/generator/template/index.css
+++ b/src/generator/template/index.css
@@ -3,6 +3,13 @@ h1 {
   font-size: 36pt;
 }
 
+footer {
+  color: white;
+  font-size: 4em;
+  -webkit-text-stroke-color: teal;
+  -webkit-text-stroke-width: 2px;
+}
+
 .bar {
   fill: teal;
 }
