--- a/src/generator/templates/index.html.mustache
+++ b/src/generator/templates/index.html.mustache
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/index.css">
   </head>
   <header>
-    <h1>{{ test }}</h1>
+    <h1>title: {{ title }}</h1>
   </header>
   <body>
   </body>
