creating dev-core

--- a/src/generator/templates/index.scss
+++ b/src/generator/templates/index.scss
@@ -1,9 +1,10 @@
 /* for development */
 @media screen {
   html {
+    background: gray;
     border: 1px solid red;
     height: 1056px;
-    background: teal;
+    margin: 0 auto;
     width: 815px;
   }
 }
