--- a/src/generator/styles/index.scss
+++ b/src/generator/styles/index.scss
@@ -25,7 +25,6 @@ header{
 
   ul {
     list-style: none;
-    margin: 0;
     padding: 0;
   }
 }
@@ -48,9 +47,22 @@ footer {
   padding-top: 15px;
 
   ul {
+    padding: 0;
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+
     li {
       list-style: none;
-      display: inline-block;
+      flex-grow: 2;
+    }
+
+    & > :first-child {
+      flex-basis: 55px
+    }
+
+    & > :last-child {
+      text-align: right;
     }
   }
 }
@@ -74,37 +86,49 @@ main {
     &#charts {
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
       flex-grow: 1;
+
+      & > :first-child {
+        padding-top: 0;
+      }
+
+      & > :last-child {
+        min-height: 75px;
+        padding-bottom: 0;
+        border: 0;
+      }
 
       div {
         padding: 25px 0;
         border-bottom: 1px solid lightgrey;
         min-height: 145px;
-        }
-        .comparisonInfo {
-          min-height: 50px;
-          padding-top: 25px;
-          width: 123px;
-          margin-right: 30px;
-          display: flex;
-          justify-content: space-between;
-          border: 0;
-          div {
-            padding: 0;
-            border: 0;
-            min-height: 50px;
-          }
-          p {
-            font-size: .75em;
-            padding: 0;
-          }
+      }
 
-          span {
-            font-size: 2em;
-          }
+      .comparisonInfo {
+        min-height: 50px;
+        padding-top: 25px;
+        width: 123px;
+        margin-right: 30px;
+        display: flex;
+        justify-content: space-between;
+        border: 0;
+
+        div {
+          padding: 0;
+          border: 0;
+          min-height: 50px;
+        }
+
+        p {
+          font-size: .75em;
+          padding: 0;
+        }
+
+        span {
+          font-size: 2em;
         }
       }
+    }
   }
 }
 
