--- a/src/generator/styles/index.scss
+++ b/src/generator/styles/index.scss
@@ -12,28 +12,53 @@ header {
   box-sizing: border-box;
 
   p {
-    font-size: 0.75em
+    font-size: 1em;
+
+    span {
+      font-weight: 600;
+    }
   }
 
-  h2 {
-    margin-top: 15px;
+  h1 {
+    font-weight: 900;
+    margin: 15px 0 8px;
   }
 }
 
 #patientData {
-  font-size: 10pt;
+  font-size: .75em;
   display: flex;
   justify-content: space-between;
 
   section {
     display: flex;
     justify-content: space-between;
-    flex-basis: 66%;
+    flex-basis: 55%;
+  }
+  aside {
+    font-weight: 600;
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    width: 120px;
+
+    div {
+      border-radius: 25px;
+      background-color: $proteus-orange;
+      height:15px;
+      width: 15px;
+      border: 1px solid $secondary;
+      &.active {
+        border-color: $proteus-orange;
+      }
+    }
+
   }
 
   ul {
     list-style: none;
     padding: 0;
+    margin: 0;
   }
 }
 
@@ -79,13 +104,13 @@ main {
   border-top: 2px solid lightgrey;
   padding-top: 20px;
   section {
-    h4 {
+    h2 {
       margin: 0;
     }
 
     &#digimeds {
-      width: 205px;
-      margin-right: 20px;
+      width: 215px;
+      margin-right: 30px;
     }
 
     &#charts {
@@ -103,13 +128,13 @@ main {
         border: 0;
       }
 
-      div {
-        padding: 25px 0;
+      & > div {
+        padding: 16px 0;
         border-bottom: 1px solid lightgrey;
-        min-height: 145px;
+        min-height: 120px;
 
         p {
-          padding-top: 25px;
+          padding-top: 16px;
           font-size: .75em;
           margin: 0;
 
@@ -123,11 +148,9 @@ main {
         margin-right: 30px;
         display: flex;
         justify-content: space-between;
-        border: 0;
 
         div {
           padding: 0;
-          border: 0;
           min-height: 50px;
         }
 
@@ -152,5 +175,47 @@ main {
 }
 
 #proteusDigitalSummary {
+  h4 {
+    padding-bottom: 10px;
+  }
+
+  #summary {
+    display: flex;
+    justify-content: space-between;
+    div {
+      &:first-of-type {
+        padding-left: 0;
+      }
+      flex-basis: 130px;
+      padding: 10px 0 0 30px;
+      min-height: auto;
+      width: 95px;
+      font-size: .75em;
+      p {
+        padding-top: 10px;
+        margin: 0;
+        height: 75px;
+        h4 {
+          font-weight: 600;
+        }
+        .recommendation {
+          font-weight: 200;
+          color: $secondary;
+          padding-bottom: 10px;
+          display: block;
+        }
+      }
+      & > span {
+        border: 2px solid $secondary;
+        display: block;
+        border-radius: 5px;
+        &.active {
+          border: 3px solid $proteus-orange;
+
+        }
+
+      }
+    }
+  }
 }
 
