hide disabled input box

--- a/src/server/views/index.html.mustache
+++ b/src/server/views/index.html.mustache
@@ -16,6 +16,9 @@
       form {
         text-align: center;
       }
+      input[disabled] {
+        display: none;
+      }
     </style>
   </head>
   <body>
