--- a/src/generator/styles/index.scss
+++ b/src/generator/styles/index.scss
@@ -37,10 +37,12 @@ header {
   }
   aside {
     font-weight: 600;
+    font-size: .75em;
     display: flex;
     justify-content: space-between;
-    align-content: center;
-    width: 120px;
+    align-items: center;
+    min-width: 90px;
+    fill: $proteus-orange;
 
     div {
       border-radius: 25px;
@@ -48,11 +50,7 @@ header {
       height:15px;
       width: 15px;
       border: 1px solid $secondary;
-      &.active {
-        border-color: $proteus-orange;
-      }
     }
-
   }
 
   ul {
@@ -108,12 +106,12 @@ main {
       margin: 0;
     }
 
-    &#digimeds {
+    &:first-child#leftColumn {
       width: 215px;
       margin-right: 30px;
     }
 
-    &#charts {
+    &:last-child#rightColumn {
       display: flex;
       flex-direction: column;
       flex-grow: 1;
@@ -145,13 +143,13 @@ main {
         min-height: 50px;
         padding-top: 20px;
         width: 123px;
-        margin-right: 30px;
         display: flex;
         justify-content: space-between;
 
         div {
           padding: 0;
           min-height: 50px;
+          flex-basis: 50px;
         }
 
         p {
