--- a/src/generator/templates/index.html.mustache
+++ b/src/generator/templates/index.html.mustache
@@ -126,7 +126,7 @@
     <footer>
       <ul>
         <li>Report Generated {{createDate}}</li>
-        <li>Proteus ID - {{patientData.id}} </li>
+        <li>Patient ID - {{patientData.id}} </li>
         <li><img src='/assets/Proteus_Discover_logo_black.svg' /></li>
       </ul>
     </footer>
