--- a/app/src/UserForm/styles/index.css
+++ b/app/src/UserForm/styles/index.css
@@ -16,6 +16,7 @@ form > label > span {
   width: 25%;
   align-self: center;
 }
+
 form > label > * {
   margin-left: 2px;
   display: inline-flex;
@@ -28,6 +29,8 @@ form > label > * {
   margin-top: 30px;
 }
 .controls input {
+  flex-grow: 1;
   flex-basis: 47%;
+  margin: 0 5px;
 
 }
